--- a/Proyecto 2/pyproject.toml
+++ b/Proyecto 2/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "numpy",
     "pydantic",
     "pandas",
-    "matplotlib"
+    "matplotlib",
+    "openpyxl",
+    "python-dotenv"
 ]
 
