--- a/Proyecto 2/pyproject.toml
+++ b/Proyecto 2/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "pandas",
     "matplotlib",
     "openpyxl",
-    "python-dotenv"
+    "python-dotenv",
+    "streamlit"
 ]
 
